--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,11 +47,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "com.facebook.react:react-native:+" // From node_modules
+    implementation "com.facebook.react:react-native:0.70.6" // From node_modules
     implementation "org.webkit:android-jsc:+"
-
-    implementation("org.greenrobot:eventbus:3.3.1")
-
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
